[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

description = "Visualization helpers for machine learning model exploration"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "ml_viz"
requires-python = ">=3.9"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "ml_viz*",]
namespaces = false

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE"

[project.scripts]
"ml_viz" = "ml_viz.bin.main:main"

[tool.setuptools_scm]
write_to = "ml_viz/_version.py"

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"

[tool.pytest.ini_options]
addopts = "--cov=."

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", "build", "dist",
           "ml_viz/_version.py"]

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "B950"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
